# p2r

./: .gitignore  DEVELOPMENT.md  README.md  activate.sh  pyproject.toml
doc/: PRD.md  mineru_api_reference.md  phase1_complete.md  phase1_plan.md  phase2_plan.md
output/: full.html  full.md
output/raw/: f3504040-a6e8-40bb-976c-307f46c57d3a_content_list.json  f3504040-a6e8-40bb-976c-307f46c57d3a_model.json  layout.json
output_rebuilt/: rebuild_from_json.py  rebuilt.html  rebuilt.md  rebuilt_no_footnotes.md
src/p2r/: __init__.py  cli.py  config.py  mineru.py
tests/: __init__.py  conftest.py  test_html_output.py
